# pythonisms

./: pyproject.toml  pythonisms.py
pythonisms/: pythonisms.py
tests/: test_pythonisms.py
